# rps

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  TODO.md  vcpkg.json
.github/workflows/: build.yml
apps/rps-pluginhost/: CMakeLists.txt
apps/rps-pluginhost-clap/: CMakeLists.txt
apps/rps-pluginhost-clap/src/: ClapGuiHost.cpp  ClapGuiHost.hpp  main.cpp
apps/rps-pluginhost-vst3/: CMakeLists.txt
apps/rps-pluginhost-vst3/src/: Vst3GuiHost.cpp  Vst3GuiHost.hpp  main.cpp
apps/rps-pluginhost/src/: main.cpp
apps/rps-pluginhost/src/clap/: ClapGuiHost.cpp  ClapGuiHost.hpp
apps/rps-pluginhost/src/vst3/: Vst3GuiHost.cpp  Vst3GuiHost.hpp
apps/rps-pluginscanner/: CMakeLists.txt
apps/rps-pluginscanner/include/rps/scanner/: AaxScanner.hpp  AuScanner.hpp  ClapScanner.hpp  IPluginFormatScanner.hpp  LadspaScanner.hpp  Lv2Scanner.hpp  Vst2Scanner.hpp  Vst3Scanner.hpp
apps/rps-pluginscanner/src/: main.cpp
apps/rps-pluginscanner/src/scanners/: AaxScanner.cpp  AuScanner.mm  ClapScanner.cpp  LadspaScanner.cpp  Lv2Scanner.cpp  Vst2Scanner.cpp  Vst3Scanner.cpp
apps/rps-pluginscanorchestrator/: CMakeLists.txt
apps/rps-pluginscanorchestrator/include/rps/orchestrator/: ConsoleScanObserver.hpp  ProcessPool.hpp  ScanObserver.hpp
apps/rps-pluginscanorchestrator/include/rps/orchestrator/db/: DatabaseManager.hpp
apps/rps-pluginscanorchestrator/src/: ConsoleScanObserver.cpp  ProcessPool.cpp  main.cpp
apps/rps-pluginscanorchestrator/src/db/: DatabaseManager.cpp
apps/rps-server/: CMakeLists.txt
apps/rps-server/include/rps/server/: GrpcScanObserver.hpp  GuiSessionManager.hpp  RpsServiceImpl.hpp
apps/rps-server/src/: GrpcScanObserver.cpp  GuiSessionManager.cpp  ProtobufCompat.cpp  RpsServiceImpl.cpp  main.cpp
apps/rps-standalone/: CMakeLists.txt
apps/rps-standalone/src/: main.cpp
apps/rps-vstscannermaster/: CMakeLists.txt
apps/rps-vstscannermaster/src/: main.cpp
cmake/: try_copy.cmake
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/src/: WindowsProcessJob.cpp  WindowsProcessJob.hpp  main.cpp
examples/java/: README.md  pom.xml  run-client.ps1
examples/java/src/main/java/rps/client/: RpsClient.java  RpsClientMain.java  ServerManager.java  WindowsJobObject.java
examples/python/: README.md  foo.state  generate_proto.py  generate_proto.sh  pyproject.toml  test.py  test.state
examples/python/rps_client/: __main__.py  chain.py  client.py  open_gui.py  pluginhost.py  rps_audio.py  server_manager.py  tui.py  windows_job.py
libs/rps-audio/: CMakeLists.txt
libs/rps-audio/include/rps/audio/: IAudioDevice.hpp  Sdl3AudioDevice.hpp  SharedAudioRing.hpp
libs/rps-audio/src/: AudioDeviceFactory.cpp  Sdl3AudioDevice.cpp  SharedAudioRing.cpp
libs/rps-coordinator/: CMakeLists.txt
libs/rps-coordinator/include/rps/coordinator/: AudioBuffer.hpp  ChannelFormat.hpp  Coordinator.hpp  Graph.hpp  GraphExecutor.hpp  GraphNode.hpp  GraphSerializer.hpp  GraphSlicer.hpp  GraphWorkerMain.hpp  LatencyCalculator.hpp  ProcessSlice.hpp
libs/rps-coordinator/src/: AudioBuffer.cpp  ChannelFormat.cpp  Coordinator.cpp  Graph.cpp  GraphExecutor.cpp  GraphNode.cpp  GraphSerializer.cpp  GraphSlicer.cpp  GraphWorkerMain.cpp  LatencyCalculator.cpp  ProcessSlice.cpp
libs/rps-coordinator/tests/: AudioBufferTest.cpp  ChannelFormatTest.cpp  CoordinatorTest.cpp  CpuTopologyTest.cpp  GraphExecutorTest.cpp  GraphSerializerTest.cpp  GraphSlicerTest.cpp  GraphTest.cpp  LatencyTest.cpp  TestFramework.hpp  TestMain.cpp
libs/rps-core/: CMakeLists.txt
libs/rps-core/include/rps/core/: CpuTopology.hpp  DefaultPaths.hpp  FormatTraits.hpp  LoggingInit.hpp  PluginDiscovery.hpp
libs/rps-core/src/: CpuTopology.cpp  DefaultPaths.cpp  FormatTraits.cpp  LoggingInit.cpp  PluginDiscovery.cpp
libs/rps-engine/: CMakeLists.txt
libs/rps-engine/include/rps/engine/: ConsoleScanObserver.hpp  ProcessPool.hpp  ScanEngine.hpp  ScanObserver.hpp
libs/rps-engine/include/rps/engine/db/: DatabaseManager.hpp
libs/rps-engine/src/: ConsoleScanObserver.cpp  ProcessPool.cpp  ScanEngine.cpp
libs/rps-engine/src/db/: DatabaseManager.cpp
libs/rps-gui/: CMakeLists.txt
libs/rps-gui/include/rps/gui/: GuiWorkerMain.hpp  IPluginGuiHost.hpp  SdlWindow.hpp
libs/rps-gui/src/: GuiWorkerMain.cpp  SdlWindow.cpp
libs/rps-host/: CMakeLists.txt
libs/rps-host/include/rps/host/: IPluginHost.hpp
libs/rps-ipc/: CMakeLists.txt
libs/rps-ipc/include/rps/ipc/: Connection.hpp  Messages.hpp  StdioPipeConnection.hpp
libs/rps-ipc/src/: Connection.cpp  Messages.cpp  StdioPipeConnection.cpp
libs/rps-proto/: CMakeLists.txt
proto/: host.proto  rps.proto  scanner.proto
